Feat(eos_designs):Addressing Comments

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-pathfinder.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-pathfinder.cfg
@@ -201,24 +201,24 @@ interface Ethernet1
    no switchport
    flow tracker hardware WAN-FLOW-TRACKER
    ip address 10.7.7.7/31
-   ip access-group WAN_TRANSPORT_Ethernet1_IN in
-   ip access-group WAN_TRANSPORT_OUT out
+   ip access-group ACL-WAN-TRANSPORT-ETHERNET1-IN in
+   ip access-group ACL-WAN-TRANSPORT-OUT out
 !
 interface Ethernet2
    no shutdown
    no switchport
    flow tracker hardware WAN-FLOW-TRACKER
    ip address 172.16.0.1/31
-   ip access-group WAN_TRANSPORT_Ethernet2_IN in
-   ip access-group WAN_TRANSPORT_OUT out
+   ip access-group ACL-WAN-TRANSPORT-ETHERNET2-IN in
+   ip access-group ACL-WAN-TRANSPORT-OUT out
 !
 interface Ethernet3
    no shutdown
    no switchport
    flow tracker hardware WAN-FLOW-TRACKER
    ip address 10.9.9.9/31
-   ip access-group WAN_TRANSPORT_Ethernet3_IN in
-   ip access-group WAN_TRANSPORT_OUT out
+   ip access-group ACL-WAN-TRANSPORT-ETHERNET3-IN in
+   ip access-group ACL-WAN-TRANSPORT-OUT out
 !
 interface Loopback0
    description Router_ID
@@ -274,46 +274,34 @@ application traffic recognition
    field-set l4-port TCP-SRC-2
       42
 !
-ip access-list WAN_TRANSPORT_Ethernet1_IN
-   10 remark ### Allow BGP ###
-   20 permit tcp any 10.7.7.6/31 eq bgp
-   30 remark ### Allow GRE ###
-   40 permit gre any 10.7.7.6/31
-   50 remark ### Allow IPSEC ###
-   60 permit udp any 10.7.7.6/31 eq isakmp 3478 non500-isakmp
-   70 remark ### Allow ICMP ###
-   80 permit icmp any 10.7.7.6/31 echo-reply
-   90 permit icmp any 10.7.7.6/31 unreachable
-   100 permit icmp any 10.7.7.6/31 time-exceeded
-   110 deny ip any any
+ip access-list ACL-WAN-TRANSPORT-ETHERNET1-IN
+   10 remark ### Allow IPSEC ###
+   20 permit udp any host 10.7.7.7 eq isakmp 3478 non500-isakmp
+   30 remark ### Allow ICMP ###
+   40 permit icmp any host 10.7.7.7 echo-reply
+   50 permit icmp any host 10.7.7.7 unreachable
+   60 permit icmp any host 10.7.7.7 time-exceeded
+   70 deny ip any any
 !
-ip access-list WAN_TRANSPORT_Ethernet2_IN
-   10 remark ### Allow BGP ###
-   20 permit tcp any 172.16.0.0/31 eq bgp
-   30 remark ### Allow GRE ###
-   40 permit gre any 172.16.0.0/31
-   50 remark ### Allow IPSEC ###
-   60 permit udp any 172.16.0.0/31 eq isakmp 3478 non500-isakmp
-   70 remark ### Allow ICMP ###
-   80 permit icmp any 172.16.0.0/31 echo-reply
-   90 permit icmp any 172.16.0.0/31 unreachable
-   100 permit icmp any 172.16.0.0/31 time-exceeded
-   110 deny ip any any
+ip access-list ACL-WAN-TRANSPORT-ETHERNET2-IN
+   10 remark ### Allow IPSEC ###
+   20 permit udp any host 172.16.0.1 eq isakmp 3478 non500-isakmp
+   30 remark ### Allow ICMP ###
+   40 permit icmp any host 172.16.0.1 echo-reply
+   50 permit icmp any host 172.16.0.1 unreachable
+   60 permit icmp any host 172.16.0.1 time-exceeded
+   70 deny ip any any
 !
-ip access-list WAN_TRANSPORT_Ethernet3_IN
-   10 remark ### Allow BGP ###
-   20 permit tcp any 10.9.9.8/31 eq bgp
-   30 remark ### Allow GRE ###
-   40 permit gre any 10.9.9.8/31
-   50 remark ### Allow IPSEC ###
-   60 permit udp any 10.9.9.8/31 eq isakmp 3478 non500-isakmp
-   70 remark ### Allow ICMP ###
-   80 permit icmp any 10.9.9.8/31 echo-reply
-   90 permit icmp any 10.9.9.8/31 unreachable
-   100 permit icmp any 10.9.9.8/31 time-exceeded
-   110 deny ip any any
+ip access-list ACL-WAN-TRANSPORT-ETHERNET3-IN
+   10 remark ### Allow IPSEC ###
+   20 permit udp any host 10.9.9.9 eq isakmp 3478 non500-isakmp
+   30 remark ### Allow ICMP ###
+   40 permit icmp any host 10.9.9.9 echo-reply
+   50 permit icmp any host 10.9.9.9 unreachable
+   60 permit icmp any host 10.9.9.9 time-exceeded
+   70 deny ip any any
 !
-ip access-list WAN_TRANSPORT_OUT
+ip access-list ACL-WAN-TRANSPORT-OUT
    10 remark  ### Blocking RFC 1918 prefixes ###
    20 deny ip any 10.0.0.0/8
    30 deny ip any 172.16.0.0/12
