--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/autovpn-edge-no-default-policy.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/autovpn-edge-no-default-policy.cfg
@@ -76,7 +76,7 @@ interface Ethernet1
    no switchport
    ip address dhcp
    dhcp client accept default-route
-   ip access-group WAN_TRANSPORT_OUT out
+   ip access-group ACL-WAN-TRANSPORT-OUT out
 !
 interface Loopback0
    description Router_ID
@@ -102,7 +102,7 @@ application traffic recognition
    field-set ipv4 prefix CONTROL-PLANE-APP-DEST-PREFIXES
       2.2.2.2/32
 !
-ip access-list WAN_TRANSPORT_OUT
+ip access-list ACL-WAN-TRANSPORT-OUT
    10 remark  ### Blocking RFC 1918 prefixes ###
    20 deny ip any 10.0.0.0/8
    30 deny ip any 172.16.0.0/12
