--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/autovpn-rr2.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/autovpn-rr2.cfg
@@ -94,8 +94,8 @@ interface Ethernet1
    no shutdown
    no switchport
    ip address 10.8.8.8/31
-   ip access-group WAN_TRANSPORT_Ethernet1_IN in
-   ip access-group WAN_TRANSPORT_OUT out
+   ip access-group ACL-WAN-TRANSPORT-ETHERNET1-IN in
+   ip access-group ACL-WAN-TRANSPORT-OUT out
 !
 interface Loopback0
    description Router_ID
@@ -125,20 +125,16 @@ application traffic recognition
    field-set ipv4 prefix CONTROL-PLANE-APP-SRC-PREFIXES
       192.168.131.2/32
 !
-ip access-list WAN_TRANSPORT_Ethernet1_IN
-   10 remark ### Allow BGP ###
-   20 permit tcp any 10.8.8.8/31 eq bgp
-   30 remark ### Allow GRE ###
-   40 permit gre any 10.8.8.8/31
-   50 remark ### Allow IPSEC ###
-   60 permit udp any 10.8.8.8/31 eq isakmp 3478 non500-isakmp
-   70 remark ### Allow ICMP ###
-   80 permit icmp any 10.8.8.8/31 echo-reply
-   90 permit icmp any 10.8.8.8/31 unreachable
-   100 permit icmp any 10.8.8.8/31 time-exceeded
-   110 deny ip any any
+ip access-list ACL-WAN-TRANSPORT-ETHERNET1-IN
+   10 remark ### Allow IPSEC ###
+   20 permit udp any host 10.8.8.8 eq isakmp 3478 non500-isakmp
+   30 remark ### Allow ICMP ###
+   40 permit icmp any host 10.8.8.8 echo-reply
+   50 permit icmp any host 10.8.8.8 unreachable
+   60 permit icmp any host 10.8.8.8 time-exceeded
+   70 deny ip any any
 !
-ip access-list WAN_TRANSPORT_OUT
+ip access-list ACL-WAN-TRANSPORT-OUT
    10 remark  ### Blocking RFC 1918 prefixes ###
    20 deny ip any 10.0.0.0/8
    30 deny ip any 172.16.0.0/12
