--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-transit.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-transit.cfg
@@ -232,7 +232,7 @@ interface Ethernet1.42
    flow tracker hardware WAN-FLOW-TRACKER
    ip address dhcp
    dhcp client accept default-route
-   ip access-group WAN_TRANSPORT_OUT out
+   ip access-group ACL-WAN-TRANSPORT-OUT out
 !
 interface Ethernet2
    no shutdown
@@ -243,8 +243,8 @@ interface Ethernet2.42
    encapsulation dot1q vlan 666
    flow tracker hardware WAN-FLOW-TRACKER
    ip address 172.16.6.6/31
-   ip access-group WAN_TRANSPORT_Ethernet2.42_IN in
-   ip access-group WAN_TRANSPORT_OUT out
+   ip access-group ACL-WAN-TRANSPORT-ETHERNET2.42-IN in
+   ip access-group ACL-WAN-TRANSPORT-OUT out
 !
 interface Loopback0
    description Router_ID
@@ -303,20 +303,16 @@ application traffic recognition
    field-set l4-port TCP-SRC-2
       42
 !
-ip access-list WAN_TRANSPORT_Ethernet2.42_IN
-   10 remark ### Allow BGP ###
-   20 permit tcp any 172.16.6.6/31 eq bgp
-   30 remark ### Allow GRE ###
-   40 permit gre any 172.16.6.6/31
-   50 remark ### Allow IPSEC ###
-   60 permit udp any 172.16.6.6/31 eq isakmp 3478 non500-isakmp
-   70 remark ### Allow ICMP ###
-   80 permit icmp any 172.16.6.6/31 echo-reply
-   90 permit icmp any 172.16.6.6/31 unreachable
-   100 permit icmp any 172.16.6.6/31 time-exceeded
-   110 deny ip any any
+ip access-list ACL-WAN-TRANSPORT-ETHERNET2.42-IN
+   10 remark ### Allow IPSEC ###
+   20 permit udp any host 172.16.6.6 eq isakmp 3478 non500-isakmp
+   30 remark ### Allow ICMP ###
+   40 permit icmp any host 172.16.6.6 echo-reply
+   50 permit icmp any host 172.16.6.6 unreachable
+   60 permit icmp any host 172.16.6.6 time-exceeded
+   70 deny ip any any
 !
-ip access-list WAN_TRANSPORT_OUT
+ip access-list ACL-WAN-TRANSPORT-OUT
    10 remark  ### Blocking RFC 1918 prefixes ###
    20 deny ip any 10.0.0.0/8
    30 deny ip any 172.16.0.0/12
