--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/autovpn-rr2.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/autovpn-rr2.yml
@@ -98,63 +98,46 @@ management_api_http:
   - name: MGMT
   enable_https: true
 ip_access_lists:
-- name: WAN_TRANSPORT_Ethernet1_IN
+- name: ACL-WAN-TRANSPORT-ETHERNET1-IN
   entries:
   - sequence: 10
-    remark: '### Allow BGP ###'
-  - sequence: 20
-    action: permit
-    protocol: tcp
-    source: any
-    destination: 10.8.8.8/31
-    destination_ports_match: eq
-    destination_ports:
-    - bgp
-  - sequence: 30
-    remark: '### Allow GRE ###'
-  - sequence: 40
-    action: permit
-    protocol: gre
-    source: any
-    destination: 10.8.8.8/31
-  - sequence: 50
     remark: '### Allow IPSEC ###'
-  - sequence: 60
+  - sequence: 20
     action: permit
     protocol: udp
     source: any
-    destination: 10.8.8.8/31
+    destination: 10.8.8.8
     destination_ports_match: eq
     destination_ports:
     - isakmp
     - '3478'
     - non500-isakmp
-  - sequence: 70
+  - sequence: 30
     remark: '### Allow ICMP ###'
-  - sequence: 80
+  - sequence: 40
     action: permit
     protocol: icmp
     icmp_type: echo-reply
     source: any
-    destination: 10.8.8.8/31
-  - sequence: 90
+    destination: 10.8.8.8
+  - sequence: 50
     action: permit
     protocol: icmp
     icmp_type: unreachable
     source: any
-    destination: 10.8.8.8/31
-  - sequence: 100
+    destination: 10.8.8.8
+  - sequence: 60
     action: permit
     protocol: icmp
     icmp_type: time-exceeded
     source: any
-    destination: 10.8.8.8/31
-  - sequence: 110
+    destination: 10.8.8.8
+  - sequence: 70
     action: deny
     protocol: ip
     source: any
     destination: any
-- name: WAN_TRANSPORT_OUT
+- name: ACL-WAN-TRANSPORT-OUT
   entries:
   - sequence: 10
     remark: ' ### Blocking RFC 1918 prefixes ###'
@@ -184,8 +167,8 @@ ethernet_interfaces:
   ip_address: 10.8.8.8/31
   shutdown: false
   type: routed
-  access_group_in: WAN_TRANSPORT_Ethernet1_IN
-  access_group_out: WAN_TRANSPORT_OUT
+  access_group_in: ACL-WAN-TRANSPORT-ETHERNET1-IN
+  access_group_out: ACL-WAN-TRANSPORT-OUT
 loopback_interfaces:
 - name: Loopback0
   description: Router_ID
