--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/defs_node_type_l3_interfaces.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/defs_node_type_l3_interfaces.schema.yml
@@ -84,8 +84,7 @@ $defs:
         enable_wan_acls:
           type: bool
           default: True
-          description: |-
-            Enable this to apply recommended ACLs on the device WAN interfaces.
+          description: Enable this to apply recommended ACLs on the device WAN interfaces.
         raw_eos_cli:
           type: str
           description: EOS CLI rendered directly on the interface in the final EOS configuration.
