Restructure schema and updated template for qos police

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/policy-maps.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/policy-maps.cfg
@@ -23,6 +23,7 @@ policy-map type quality-of-service PM_REPLICATION_LD
       set dscp af11
       set traffic-class 2
       set drop-precedence 1
+      police rate 10 kbps burst-size 260 kbytes action set drop-precedence rate 30 kbps 270 kbytes
    !
    class CM_REPLICATION_LD_2
       set dscp af11
@@ -32,5 +33,12 @@ policy-map type quality-of-service PM_REPLICATION_LD2
    class CM_REPLICATION_LD
       set dscp af11
       set cos 4
+      police cir 12 kbps bc 267 kbytes
+!
+policy-map type quality-of-service PM_REPLICATION_LD3
+   class CM_REPLICATION_LD
+      set dscp af11
+      set cos 6
+      police rate 10 kbps burst-size 260 kbytes
 !
 end
