--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/policy-maps.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/policy-maps.yml
@@ -7,6 +7,15 @@ policy_maps:
             dscp: af11
             traffic_class: 2
             drop_precedence: 1
+          police:
+            rate:
+              lower_rate: 10
+              rate_unit: kbps
+              lower_rate_burst_size: 260
+              burst_size_unit: kbytes
+              higher_rate: 30
+              higher_rate_burst_size: 270
+              action: drop-precedence
         - name: CM_REPLICATION_LD_2
           set:
             dscp: af11
@@ -17,6 +26,24 @@ policy_maps:
           set:
             dscp: af11
             cos: 4
+          police:
+            cir:
+              cir_rate: 12
+              cir_unit: kbps
+              bc: 267
+              bc_unit: kbytes
+    - name: PM_REPLICATION_LD3
+      classes:
+        - name: CM_REPLICATION_LD
+          set:
+            dscp: af11
+            cos: 6
+          police:
+            rate:
+              lower_rate: 10
+              rate_unit: kbps
+              lower_rate_burst_size: 260
+              burst_size_unit: kbytes
   pbr:
     - name: PM_PBR_BREAKOUT
       classes:
