--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -1484,6 +1484,8 @@ keys:
     keys:
       system_auth_control:
         type: bool
+      protocol_bpdu_bypass:
+        type: bool
       protocol_lldp_bypass:
         type: bool
       dynamic_authorization:
