--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/dot1x.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/dot1x.schema.yml
@@ -12,6 +12,8 @@ keys:
     keys:
       system_auth_control:
         type: bool
+      protocol_bpdu_bypass:
+        type: bool
       protocol_lldp_bypass:
         type: bool
       dynamic_authorization:
