Upload artefact for issue #3621

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/dot1x-2.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/dot1x-2.yml
@@ -4,6 +4,7 @@
 # we verify that PR 2764 is not happenign again
 dot1x:
   system_auth_control: true
+  protocol_bpdu_bypass: true
   protocol_lldp_bypass: true
   dynamic_authorization: true
   radius_av_pair:
