--- a/ansible_collections/arista/avd/molecule/deploy_to_cv/intended/structured_configs/change_tags/s1-leaf1.yml
+++ b/ansible_collections/arista/avd/molecule/deploy_to_cv/intended/structured_configs/change_tags/s1-leaf1.yml
@@ -121,35 +121,17 @@ metadata:
   cv_tags:
     device_tags:
     - name: Role
-      value: edge
-    # - name: Region
-    #   value: AVD_Land_East
-    # - name: Zone
-    #   value: DEFAULT-ZONE
-    # - name: Site
-    #   value: Site511
+      value: border
     interface_tags:
     - interface: Ethernet1
       tags:
       - name: Type
         value: wan
-      # - name: Carrier
-      #   value: ATT
-      # - name: Circuit
-      #   value: '666'
     - interface: Ethernet2
       tags:
       - name: Type
         value: wan
-      # - name: Carrier
-      #   value: Colt
-      # - name: Circuit
-      #   value: '10555'
     - interface: Ethernet3
       tags:
       - name: Type
         value: wan
-      # - name: Carrier
-      #   value: Comcast-5G
-      # - name: Circuit
-      #   value: AF830
