--- a/.github/workflows/new-cvp-integration.yml
+++ b/.github/workflows/new-cvp-integration.yml
@@ -1,7 +1,8 @@
 ---
 name: "deploy_to_cv testing"
 
-on: pull_request
+# on: pull_request
+on: workflow_dispatch
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref }}
