--- a/.github/workflows/new-cvp-integration.yml
+++ b/.github/workflows/new-cvp-integration.yml
@@ -16,7 +16,7 @@ jobs:
     name: Test Python requirements installation
     runs-on: ubuntu-latest
     # needs: [ pre_commit ]
-    if: needs.file-changes.outputs.requirements == 'true'
+    # if: needs.file-changes.outputs.requirements == 'true'
     strategy:
       fail-fast: true
       matrix:
@@ -53,7 +53,7 @@ jobs:
         #   - avd_scenario: 'eos_cli_config_gen'
         #     ansible_version: 'ansible-core==2.14.0'
     # needs: [ pre_commit ]
-    if: needs.file-changes.outputs.config_gen == 'true'
+    # if: needs.file-changes.outputs.config_gen == 'true'
     steps:
       - name: 'Set environment variables'
         env:
