--- a/.github/workflows/new-cvp-integration.yml
+++ b/.github/workflows/new-cvp-integration.yml
@@ -67,7 +67,7 @@ jobs:
         with:
           molecule_parentdir: 'ansible_collections/arista/avd'
           molecule_command: 'converge'
-          molecule_args: '--scenario-name ${{ matrix.avd_scenario }} -vvv'
+          molecule_args: '--scenario-name ${{ matrix.avd_scenario }}'
           pip_file: ansible_collections/arista/avd/requirements.txt
           galaxy_file: "ansible_collections/arista/avd/collections.yml"
           ansible: ${{ matrix.ansible_version }}
