changed name of env var

--- a/.github/workflows/new-cvp-integration.yml
+++ b/.github/workflows/new-cvp-integration.yml
@@ -57,8 +57,8 @@ jobs:
     steps:
       - name: 'Set environment variables'
         env:
-          CVAAS_TOKEN: ${{ secrets.CVAAS_AAWG_DEMO }}
-        if: ${{ env.CVAAS_TOKEN != '' }}
+          CVAAS_AAWG_DEMO: ${{ secrets.CVAAS_AAWG_DEMO }}
+        if: ${{ env.CVAAS_AAWG_DEMO != '' }}
         # run: 'echo "echo the secret \"MY_SECRET\" has not been made; echo please go to \"settings \> secrets \> actions\" to create it"
         run: |
           echo "PY_COLORS=1" >> $GITHUB_ENV
