--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -11933,7 +11933,7 @@ keys:
               key:
                 type: str
                 description: Password string.
-              key_id:
+              key_ids:
                 type: list
                 convert_types:
                 - dict
