--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/router_isis.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/router_isis.schema.yml
@@ -86,7 +86,7 @@ keys:
               key:
                 type: str
                 description: Password string.
-              key_id:
+              key_ids:
                 type: list
                 convert_types:
                   - dict
