--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-bgp-evpn-mpls.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-bgp-evpn-mpls.yml
@@ -37,6 +37,11 @@ router_bgp:
     - ip_address: 192.168.255.2
       peer_group: EVPN-OVERLAY-PEERS
   address_family_evpn:
+    next_hop_mpls_resolution_ribs:
+      - rib_type: "tunnel-rib-colored"
+      - rib_type: "tunnel-rib"
+        rib_name: "test-rib"
+      - rib_type: "system-connected"
     neighbor_default:
       encapsulation: mpls
       next_hop_self_source_interface: Loopback0
