Revert convert_type changes

--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
@@ -6664,6 +6664,7 @@ $defs:
             type: str
             convert_types:
             - int
+            - float
           bgp_defaults:
             documentation_options:
               table: node-type-bgp-configuration
@@ -6803,6 +6804,7 @@ $defs:
                       type: str
                       convert_types:
                       - int
+                      - float
               evpn_l2:
                 description: Enable EVPN Gateway functionality for route-types 2 (MAC-IP)
                   and 3 (IMET).
@@ -6899,6 +6901,7 @@ $defs:
                       required: true
                       convert_types:
                       - int
+                      - float
           mlag:
             documentation_options:
               table: node-type-l2-mlag-configuration
