--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/defs_node_type.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/defs_node_type.schema.yml
@@ -462,6 +462,7 @@ $defs:
             type: str
             convert_types:
               - int
+              - float
           bgp_defaults:
             documentation_options:
               table: node-type-bgp-configuration
@@ -569,6 +570,7 @@ $defs:
                       type: str
                       convert_types:
                         - int
+                        - float
               evpn_l2:
                 description: Enable EVPN Gateway functionality for route-types 2 (MAC-IP) and 3 (IMET).
                 type: dict
@@ -652,6 +654,7 @@ $defs:
                       required: true
                       convert_types:
                         - int
+                        - float
           mlag:
             documentation_options:
               table: node-type-l2-mlag-configuration
