adding functionality to define evpn_vlan_bundle for SVIs

--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
@@ -5305,6 +5305,15 @@ $defs:
                         convert_types:
                         - int
                         description: Tag value.
+                    evpn_vlan_bundle:
+                      type: str
+                      description: 'Name of a bundle defined under ''evpn_vlan_bundles''
+                        to inherit configuration.
+
+                        To use this option the common "evpn_vlan_aware_bundles" option
+                        must be set to true.
+
+                        '
                     nodes:
                       type: list
                       primary_key: node
