adding positive and negative test for evpn_vlan_bundle for SVIs

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/evpn_vlan_bundle.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/evpn_vlan_bundle.cfg
@@ -29,7 +29,29 @@ vlan 70
 vlan 80
    name vstorage
 !
+vlan 1008
+   name SVI_1
+!
+vlan 1009
+   name SVI_2
+!
+vlan 1010
+   name SVI_3
+!
+vlan 1011
+   name SVI_4
+!
+vlan 1012
+   name SVI_5
+!
+vlan 1013
+   name SVI_6
+!
 vrf instance MGMT
+!
+vrf instance SIT2
+!
+vrf instance SIT_VRF
 !
 interface Loopback0
    description EVPN_Overlay_Peering
@@ -41,6 +63,36 @@ interface Loopback1
    no shutdown
    ip address 10.11.0.3/32
 !
+interface Vlan1008
+   description SVI_1
+   no shutdown
+   vrf SIT_VRF
+!
+interface Vlan1009
+   description SVI_2
+   no shutdown
+   vrf SIT_VRF
+!
+interface Vlan1010
+   description SVI_3
+   no shutdown
+   vrf SIT_VRF
+!
+interface Vlan1011
+   description SVI_4
+   no shutdown
+   vrf SIT2
+!
+interface Vlan1012
+   description SVI_5
+   no shutdown
+   vrf SIT2
+!
+interface Vlan1013
+   description SVI_6
+   no shutdown
+   vrf SIT2
+!
 interface Vxlan1
    description evpn_vlan_bundle_VTEP
    vxlan source-interface Loopback1
@@ -51,9 +103,15 @@ interface Vxlan1
    vxlan vlan 60 vni 10060
    vxlan vlan 70 vni 10070
    vxlan vlan 80 vni 10080
+   vxlan vlan 1010 vni 21010
+   vxlan vlan 1013 vni 21013
+   vxlan vrf SIT2 vni 654789
+   vxlan vrf SIT_VRF vni 789654
 !
 ip routing
 no ip routing vrf MGMT
+ip routing vrf SIT2
+ip routing vrf SIT_VRF
 !
 ip prefix-list PL-LOOPBACKS-EVPN-OVERLAY
    seq 10 permit 10.10.0.0/24 eq 32
@@ -96,6 +154,24 @@ router bgp 65101
       redistribute learned
       vlan 70,80
    !
+   vlan-aware-bundle bundle3
+      rd 1.1.1.1:333
+      route-target both 303:333
+      redistribute learned
+      vlan 1008-1009,1011-1012
+   !
+   vlan-aware-bundle SIT2
+      rd 10.10.0.3:655089
+      route-target both 655089:655089
+      redistribute learned
+      vlan 1013
+   !
+   vlan-aware-bundle SIT_VRF
+      rd 10.10.0.3:789954
+      route-target both 789954:789954
+      redistribute learned
+      vlan 1010
+   !
    vlan-aware-bundle storage_prod
       rd 10.10.0.3:10010
       route-target both 10010:10010
@@ -108,6 +184,20 @@ router bgp 65101
    address-family ipv4
       no neighbor EVPN-OVERLAY-PEERS activate
       neighbor IPv4-UNDERLAY-PEERS activate
+   !
+   vrf SIT2
+      rd 10.10.0.3:654789
+      route-target import evpn 654789:654789
+      route-target export evpn 654789:654789
+      router-id 10.10.0.3
+      redistribute connected
+   !
+   vrf SIT_VRF
+      rd 10.10.0.3:789654
+      route-target import evpn 789654:789654
+      route-target export evpn 789654:789654
+      router-id 10.10.0.3
+      redistribute connected
 !
 management api http-commands
    protocol https
