--- a/ansible_collections/arista/avd/molecule/eos_designs_negative_unit_tests/inventory/hosts.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_negative_unit_tests/inventory/hosts.yml
@@ -80,6 +80,7 @@ all:
         duplicate-interfaces-underlay:
         duplicate-ip-address-uplink-switch-router-bgp:
         failure-missing-evpn-vlan-bundle:
+        failure-missing-evpn-vlan-bundle_svi:
         failure-missing-evpn-multicast-l2:
         failure-missing-evpn-multicast-l3:
         failure-missing-evpn-multicast-l3-with-pim:
