--- a/.github/workflows/new-cvp-integration.yml
+++ b/.github/workflows/new-cvp-integration.yml
@@ -56,15 +56,18 @@ jobs:
     # if: needs.file-changes.outputs.config_gen == 'true'
     steps:
       - name: 'Set environment variables'
-        env:
-          CVAAS_AAWG_DEMO: ${{ secrets.CVAAS_AAWG_DEMO }}
-        if: ${{ env.CVAAS_AAWG_DEMO == '' }}
+        # env:
+        #   CVAAS_AAWG_DEMO: ${{ secrets.CVAAS_AAWG_DEMO }}
+        # if: ${{ env.CVAAS_AAWG_DEMO != '' }}
         # run: 'echo "echo the secret \"MY_SECRET\" has not been made; echo please go to \"settings \> secrets \> actions\" to create it"
         run: |
           echo "PY_COLORS=1" >> $GITHUB_ENV
           echo "ANSIBLE_FORCE_COLOR=1" >> $GITHUB_ENV
       - uses: actions/checkout@v3
       - name: Run molecule action
+        env:
+          CVAAS_AAWG_DEMO: ${{ secrets.CVAAS_AAWG_DEMO }}
+        # if: ${{ env.CVAAS_AAWG_DEMO == '' }}
         uses: arista-netdevops-community/action-molecule-avd@v1.7
         with:
           molecule_parentdir: 'ansible_collections/arista/avd'
